--- a/css/style.less
+++ b/css/style.less
@@ -27,6 +27,7 @@ body {
             stroke-width: 5px;
             transition  : all 0.5s;
             transition  : d 1s;
+            cursor: pointer;
         }
 
         .line.highlight {
@@ -37,6 +38,7 @@ body {
             stroke-width: 1px;
             stroke      : grey !important;
             opacity     : 0.2;
+            cursor:default;
         }
 
         .text {
